--- a/tmp.css
+++ b/tmp.css
@@ -1,3 +1,3 @@
 body * {
-    font-family: 'CoFo Weather 20240219' !important;
+    font-family: 'CoFo Weather 20240219', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
 }
