--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@
 #krok-services-map-module {
     font-family: "Crocnew", sans-serif;
     max-width: 100%;
+    height: 100vh;
     margin: auto;
     border: 1px solid var(--bg);
     border-radius: 8px;
@@ -120,7 +121,7 @@
 /* --- ВОССТАНОВЛЕННЫЕ СТИЛИ ЦВЕТА КНОПОК --- */
 .ksmm-filter-btn[data-category="all"] {
     color: #000;
-    border-color: rgba(0,0,0, 0.2);
+    border-color: rgba(0, 0, 0, 0.2);
 }
 
 .ksmm-filter-btn[data-category="all"].active {
@@ -141,25 +142,25 @@
 }
 
 .ksmm-filter-btn[data-category="sport"] {
-    color: var(--krok-green);
-    border-color: rgba(var(--krok-green-rgb), 0.2);
-}
-
-.ksmm-filter-btn[data-category="sport"].active {
-    background-color: var(--krok-green);
-    color: white;
-    border-color: var(--krok-green);
-}
-
-.ksmm-filter-btn[data-category="meeting"] {
     color: var(--krok-purple);
     border-color: rgba(var(--krok-purple-rgb), 0.2);
 }
 
-.ksmm-filter-btn[data-category="meeting"].active {
+.ksmm-filter-btn[data-category="sport"].active {
     background-color: var(--krok-purple);
     color: white;
     border-color: var(--krok-purple);
+}
+
+.ksmm-filter-btn[data-category="meeting"] {
+    color: var(--krok-green);
+    border-color: rgba(var(--krok-green-rgb), 0.2);
+}
+
+.ksmm-filter-btn[data-category="meeting"].active {
+    background-color: var(--krok-green);
+    color: white;
+    border-color: var(--krok-green);
 }
 
 .ksmm-filter-btn[data-category="relax"] {
@@ -212,6 +213,7 @@
     padding: 2px 4px;
     border-radius: 4px;
     font-weight: 400;
+    font-variation-settings: 'wdth' 95;
 }
 
 .ksmm-subfilter:hover {
@@ -226,7 +228,7 @@
 /* Контейнер для скролла списка */
 .ksmm-scroll-list {
     overflow-y: scroll;
-    max-height: 400px;
+    max-height: 600px;
     flex-grow: 1;
 }
 
@@ -240,12 +242,15 @@
 
 .ksmm-list-item h4 {
     margin: 0 0 8px 0;
+    font-variation-settings: 'wdth' 105;
 }
 
 .ksmm-list-item p {
     margin: 0;
     font-size: 14px;
     color: #333;
+    font-variation-settings: 'wdth' 105;
+    font-weight: 399!important;
 }
 
 .ksmm-list-item.highlight {
@@ -294,15 +299,15 @@
 
 .ksmm-floorplan path,
 .ksmm-floorplan polygon {
-/*    fill: rgba(23, 39, 54, 0.05);
+    /*    fill: rgba(23, 39, 54, 0.05);
     stroke: rgba(23, 39, 54, 0.08);
     stroke-width: 1.5;*/
     pointer-events: none;
 }
 
 #ksmm-map {
-    width: 100%;
-    height: 100%;
+/*    width: 100%;
+    height: 100%;*/
     display: block;
     cursor: grab;
     transition: all 0.15s ease-out;
@@ -348,7 +353,7 @@
 
 /* Логика .dimmed для Карты */
 .ksmm-map-area.dimmed {
-   /* opacity: 0.4;
+    /* opacity: 0.4;
     fill-opacity: 0.2;*/
     pointer-events: none;
 }
@@ -378,6 +383,8 @@
     padding: 10px;
     display: flex;
     flex-direction: column;
+    /*temp*/
+    display: none!important;
 }
 
 .ksmm-floor-btn {
