--- a/style.css
+++ b/style.css
@@ -290,6 +290,8 @@
     position: relative;
     background: var(--bg);
     /*overflow: hidden;*/
+    height: 100%;
+    min-height: 0;
 }
 
 .ksmm-floorplan {
@@ -308,14 +310,22 @@
 
 
 #ksmm-map {
-/*    width: 100%;
-    height: 100%;*/
+    width: 100%;
+    height: 100%;
     display: block;
     cursor: grab;
-    transition: all 0.15s ease-out;
+    /* Принудительно заполняем контейнер */
+    min-height: 100%;
 }
 
-#ksmm-map * {
+/* Transition для wrapper, который получает transform при панорамировании и зуме */
+#ksmm-map-wrapper {
+    transition: transform 0.15s ease-out;
+    /* Transform-origin по умолчанию (0, 0) - это правильно для нашей логики */
+}
+
+/* Переходы только для интерактивных областей, не для базового слоя */
+#ksmm-map-areas * {
     transition: all 0.15s ease-out;
 }
 
