--- a/tmp.css
+++ b/tmp.css
@@ -1,10 +1,10 @@
 @font-face {
-    font-family: 'COFO';
+    font-family: 'Croc';
     src: url('CoFoWeather20240219-VF.ttf');
 }
 
 body * {
-    font-family: 'COFO', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
+    font-family: 'Croc', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
 }
 
 
